# Claude-based-PR-AI-Review-tool-for-github

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.json  docker-compose.yml  pyproject.toml  review-docker.sh  review.sh  review_tool.json
examples/: demo_api.py
src/review_tool/: __init__.py  __main__.py  claude.py  config.py  diff_parser.py  formatter.py  github.py  graph_analyzer.py  graph_client.py  graph_lifecycle.py  models.py  pipeline.py  prompt_builder.py
src/review_tool/skills/: __init__.py  defects.py  lang_go.py  lang_java.py  lang_rust.py  lang_typescript.py  performance.py  quality.py  security.py
