[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-tool"
version = "0.1.0"
description = "AI-driven code review tool powered by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
review-tool = "review_tool.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/review_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
